--- a/views/users/_info.haml
+++ b/views/users/_info.haml
@@ -1,45 +1,49 @@
-/ %h3 My Self
+%h3.heading= @name
 %br/
-%img{:src => "img/blank-user.gif"}
-%br/
-%pre
+%img.user_image{src: "img/blank-user.gif"}
+
+.box.ib
+    %ul
+        %li 06/04/1992
+        %li Philadelphia, PA
+        %li Course: 2A
+        %li Class:  2014
+
+.box.ib
+    %h4 Interests:
+
+    soccer,
+    %br/
+    dancing,
+    %br/
+    travel
+    %br/
+
+.box.ib
+    %h4 My net
+
+    Parties
+    %br/
+    Spain@MIT
+    %br/
+    Course 2
+    %br/
+    Varsity
+    %br/
+    Culture
+    %br/
+
+.box.ib
+    %h4 My posts
+
     %code
-        06/04/1992
-        Philadelphia, PA
-        Course: 2A
-        Class:  2014
+        Total:       24
+    %br/
+    %code
+        New replies: 8
+    %br/
 
-%h4 Interests:
+.box.ib
+    %h4 Preferences
 
-soccer,
-%br/
-dancing,
-%br/
-travel
-%br/
-
-%h4 My net
-
-Parties
-%br/
-Spain@MIT
-%br/
-Course 2
-%br/
-Varsity
-%br/
-Culture
-%br/
-
-%h4 My posts
-
-%code
-    Total:       24
-%br/
-%code
-    New replies: 8
-%br/
-
-%h4 Preferences
-
-Email forwarding
+    Email forwarding
