--- a/views/main.haml
+++ b/views/main.haml
@@ -15,10 +15,11 @@
                     %h3 My Feed
                     %br/
                     %p
-                        %hr{width:"80%"}/
+                        %hr{width:"50%"}/
                     - 20.times do |i|
                         .feed_item= "asdf#{sprintf("%.2f", 1.62*i/2)}hgkj"
-                        %hr{width:"50%"}/
+                        %hr{width:"20%"}/
+                    %p EOL
             
             #right.column.ib
                 .b.h
