--- a/views/partials/_nav.haml
+++ b/views/partials/_nav.haml
@@ -2,8 +2,9 @@
     %ul
         %li
             %center
+                .all_my My:
                 %a.pjax{:href => "/main"}
-                    
+                    .my My
                     Net
         %li
             %center
