--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -277,41 +277,61 @@ body {
   border-bottom: 1px solid #265973; }
   #nav-container ul {
     display: block;
-    position: relative;
-    left: -10px; }
-  #nav-container li {
+    position: relative; }
+  #nav-container a {
     display: inline-block;
-    list-style: none;
-    margin: 0 0.5em 0 0.5em; }
-    #nav-container li a {
-      background-color: #265973;
-      border: 1px solid #193b4d;
-      border-radius: 2px;
-      display: inline-block;
-      height: 100%;
-      width: 100%;
-      font-size: 11pt;
-      padding: 0.3em; }
-    #nav-container li.login {
-      float: right;
-      margin-right: 3em; }
-    #nav-container li .my {
-      display: inline; }
-  @media only screen and (max-width : 499px) {
-    #nav-container li {
-      margin: 0 3px;
-      padding: 0; }
-      #nav-container li a {
-        border: none;
-        background-color: rgba(0, 51, 119, 0.2);
-        font-size: 9pt;
-        border-radius: 0;
-        margin: 0; }
-      #nav-container li .my {
-        display: none; }
-      #nav-container li.login {
-        float: right;
-        margin-right: 1em; } }
+    height: 100%;
+    width: 100%;
+    border: 1px solid #193b4d;
+    background-color: rgba(0, 51, 119, 0.2); }
+  @media screen and (max-width : 499px) {
+    #nav-container ul {
+      left: 5px; }
+      #nav-container ul li {
+        display: inline-block;
+        list-style: none;
+        margin: 0 3px;
+        padding: 0; }
+        #nav-container ul li a {
+          font-size: 9pt;
+          border-radius: 2px;
+          border-bottom: 0;
+          border-top: 0;
+          margin: 0 0.2em;
+          padding: 0.3em 0.4em;
+          background-color: #337799; }
+        #nav-container ul li .my {
+          display: none; }
+        #nav-container ul li .all_my {
+          font-size: 10pt;
+          display: inline;
+          position: absolute;
+          left: -1.8em;
+          top: 0.2em;
+          color: #ddd; }
+        #nav-container ul li.login {
+          float: right;
+          margin-right: 1em; } }
+  @media screen and (min-width : 500px) {
+    #nav-container ul {
+      left: -10px; }
+      #nav-container ul li {
+        display: inline-block;
+        list-style: none;
+        margin: 0 3px;
+        padding: 0; }
+        #nav-container ul li a {
+          font-size: 12pt;
+          border-radius: 4px;
+          margin: 0 0.2em;
+          padding: 0.2em; }
+        #nav-container ul li .my {
+          display: inline; }
+        #nav-container ul li .all_my {
+          display: none; }
+        #nav-container ul li.login {
+          float: right;
+          margin-right: 1em; } }
 
 #main-container {
   position: relative;
@@ -476,7 +496,7 @@ h2 {
   margin-bottom: 5px; }
 
 a, a:visited {
-  color: #aef; }
+  color: #aaeeff; }
 
 a:hover {
   color: #fee; }
