amend - 1050424-212eebeac1050addaac1050dbcbc159-0a10553fad265-0a212-106c159-0a105159c371-318g318-159d265-0a212-106ca105265hgfeac105106bfccbb10553hadecc

--- a/views/partials/_nav.haml
+++ b/views/partials/_nav.haml
@@ -3,23 +3,23 @@
         %li
             %center
                 .all_my My:
-                %a.pjax{:href => "/main"}
+                %a.pjax{:href => "/home"}
                     .my My
                     Net
         %li
             %center
-                %a.pjax{:href => "/main"}
+                %a.pjax{:href => "/#posts"}
                     .my My
                     Posts
         %li
             %center
-                %a.pjax{:href => "/main"}
+                %a.pjax{:href => "/#main"}
                     .my My
                     Tags
         %li
             %center
-                %a.pjax{:href => "/main"} Preferences
+                %a.pjax{:href => "/#main"} Preferences
         %li.login
             %center
-                - txt = "Log Out #{session[:user].capitalize}"
+                - txt = "Log Out #{@user[:name].capitalize}"
                 %a.pjax{:href => "/logout"}= txt
