--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,7 +10,7 @@
     %html{:class => "no-js", :lang => "en"}
     
 %head
-    %title CollegEbook
+    %title= @title
     
     %meta{:charset => "utf-8"}
     %meta{"http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
