--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -33,11 +33,17 @@ body{background-color:$lt-blu;}
 
     @media screen and (max-width : 499px) {
         ul{left:5px;
-            li{display:inline-block;list-style:none;margin:0 3px;padding:0;
-                a{font-size:9pt;border-radius:2px;border-bottom:0;border-top:0;margin:0 0.2em;padding:0.3em 0.4em;background-color:$bl-red;}
+            li{display:inline-block;list-style:none;margin:0 0.4em;
+                a{height:1.2em;display:inline-block;font-size:10pt;border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.3em 0.3em 0 0.3em;background-color:$bl-red;}
                 .my{display:none;}
-                .all_my{font-size:10pt;display:inline;position:absolute;left:-1.8em;top:0.2em;color:#ddd;}
-                &.login{float:right;margin-right:1em;}
+                .all_my{font-size:11pt;display:inline-block;position:absolute;left:-1.8em;top:0.2em;color:#ddd;}
+                a.icon{display:inline-block;position:relative;top:-0.1em;
+                    img{width:1.8em;height:1.8em;position:relative;top:-0.3em;}
+                }
+                &.login{float:right;margin-right:1em;padding:2px;display:inline;
+                    center{display:inline;}
+                    a.wrd{display:none;}
+                }
             }
         }
     }
@@ -47,6 +53,7 @@ body{background-color:$lt-blu;}
                 a{font-size:12pt;border-radius:4px;margin:0 0.2em;padding:0.2em;}
                 .my{display:inline;}
                 .all_my{display:none;}
+                .log_my{display:none;}
                 &.login{float:right;margin-right:1em;}
             }
         }
