amend - 360256-96ddbacb360dbbcda3664beadd96-0a3664hfea128-0a96-0a360af192-64c160-0a128-64c96-0a360256-128e224-64caecc36128efdbab36160edacba

--- a/views/partials/_nav.haml
+++ b/views/partials/_nav.haml
@@ -21,7 +21,5 @@
                 %a.pjax{:href => "/#main"} Preferences
         %li.login
             %center
-                %a.icon{:href => "/logout"}
-                    %img{src: "/img/logout.png"}
-                %a.wrd{:href => "/logout"}
-                    .my Log Out
+                %a{:href => "/logout"}
+                    Log Out
