--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -292,7 +292,6 @@ body {
         list-style: none;
         margin: 0 0.4em; }
         #nav-container ul li a {
-          height: 1.2em;
           display: inline-block;
           font-size: 10pt;
           border-radius: 2px;
@@ -318,14 +317,10 @@ body {
             width: 1.8em;
             height: 1.8em;
             position: relative;
-            top: -0.3em; }
+            top: 0; }
         #nav-container ul li.login {
           float: right;
-          margin-right: 1em;
-          padding: 2px;
-          display: inline; }
-          #nav-container ul li.login center {
-            display: inline; }
+          margin-right: 1em; }
           #nav-container ul li.login a.wrd {
             display: none; } }
   @media screen and (min-width : 500px) {
