--- a/views/partials/_nav.haml
+++ b/views/partials/_nav.haml
@@ -8,7 +8,7 @@
                     Net
         %li
             %center
-                %a.pjax{:href => "/#posts"}
+                %a.posts{:href => "#{@user[:name]}/posts"}
                     .my My
                     Posts
         %li
