--- a/views/board.haml
+++ b/views/board.haml
@@ -1,6 +1,6 @@
 = haml(:'partials/_header', :layout => false)
 
-= haml(:'partials/_nav', :layout => false)
+-# = haml(:'partials/_nav', :layout => false)
 
 #main-container.wrapper.clearfix.b{:role => "main"}
 
@@ -24,16 +24,12 @@
             
             #right.column.ib
                 .b.h
-                    %h3 Other followers
+                    %h3 Other info
                     %br/
                     %ul
-                        %li 
-                            %a.pjax{:href => "Food"} Food
-                        %li 
-                            %a.pjax{:href => "Spain@MIT"} Spain@MIT
-                        %li
-                            %a.pjax{:href => "Parties"} Parties
-                        %li
-                            %a.pjax{:href => "Class of 9999"} Class of 9999
+                        %li What
+                        %li to
+                        %li put
+                        %li here?
 
 = haml(:'partials/_footer', :layout => false)
