--- a/views/posts.haml
+++ b/views/posts.haml
@@ -1,3 +1,10 @@
-.posts-container
-    %h3 Posts
-    %p= @posts.length
+= haml(:'partials/_header', :layout => false)
+
+-# = haml(:'partials/_nav', :layout => false)
+
+#main-container.wrapper.clearfix.b{:role => "main"}
+    .posts-container{style: "padding:20px;"}
+        %h2 Posts:
+        %h2= @posts.length
+    
+= haml(:'partials/_footer', :layout => false)
