--- a/views/home.haml
+++ b/views/home.haml
@@ -5,7 +5,7 @@
 #main-container.wrapper.clearfix.b{:role => "main"}
 
     %center
-        #main.r8.b
+        #main.r8.b.clearfix
             #left.column.ib
                 .b.h
                     = haml(:'users/_info')
