--- a/views/board.haml
+++ b/views/board.haml
@@ -17,9 +17,9 @@
                     %br/
                     %p
                         %hr{width:"50%"}/
-                    - 20.times do |i|
-                        .feed_item= "asdf#{sprintf("%.2f", 1.62*i/2)}hgkj"
-                        %hr{width:"20%"}/
+                    .feed-container
+                        - 20.times do |i|
+                            .feed_item{style: "border:1px solid black;"}= "asdf#{3 * ( 1 + rand(8) )}"
                     %p EOL
             
             #right.column.ib
