--- a/views/tags.haml
+++ b/views/tags.haml
@@ -3,8 +3,8 @@
 = haml(:'partials/_nav', :layout => false)
 
 #main-container.wrapper.clearfix.b{:role => "main"}
-    .posts-container{style: "padding:20px;"}
-        %h2 Posts:
-        %h2= @posts.length
+    .tags-container{style: "padding:20px;"}
+        %h2 Tags:
+        %h2= @tags.length
     
 = haml(:'partials/_footer', :layout => false)
