--- a/views/partials/_header.haml
+++ b/views/partials/_header.haml
@@ -7,3 +7,10 @@
             %a.college_logo{:href => "http://web.mit.edu/"}
                 %img{:src => "img/cached_logo-mit.gif", :alt => "MIT"}/
             %p{:style => "position:relative; top:-5px; left:10em;"}= Time.now.strftime("Debug: load@ %Y/%m/%d %H:%M:%S")
+    - if session[:stat]
+        - if session[:stat][:status] == true
+            - color = "green"
+        - else
+            - color = "red"
+        %p{style: "color:black;position:relative;top:1.8em;background-color:#{color};margin:0 5em;"}= session[:stat][:msg]
+        - session[:stat] = nil
